dev-DEAL-327:  385 Fixed shifted content for step 5 [0.0.1]

--- a/Client/DealnetPortal.Web/Content/less/credit-check.less
+++ b/Client/DealnetPortal.Web/Content/less/credit-check.less
@@ -241,6 +241,7 @@ select.dealnet-disabled-input{
 
     }
     &:nth-child(even) {
+      padding-right: 0;
       .dealnet-credit-check-section{
         padding: 0 15% 0 0;
       }
